# sleeper_highest_scorer

./: .gitignore  README.md  pyproject.toml  setup.cfg  test_league.json  test_rosters.json
script/: api_parser.py  common.py  constants.py  drafts.py  get_all_player_status.py  get_highest_scorers.py  highest_scorer.py  main.py  test.py  user.py
script/avatars/: avatar.py
script/common/: common.py
script/leagues/: leagues.py  rosters.py
script/model/: avatar.py  user.py
script/parser/: api_parser.py
script/players/: player_types.py  players.py
script/user/: user.py
script/usercases/: get_current_top_scorer_per_position.txt
test/: test_get_all_player_status.py  test_highest_scorer.py  test_parser.py  test_players.py
test/resources/: test_player_data.json  test_roster_settings.json  test_single_roster.json  test_sleeper_user.json
usecases/: arguments.txt  configuration.txt  draw.drawio  get_weekly_top_scorer.txt  view_inactive_players_for_all_leagues
