[tool.poetry]
name = "sleeper-highest-scorer"
version = "0.1.0"
description = ""
authors = ["Qubeman <linussbo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#[project.optional-dependencies]
#lint = ["flake8", "pylint", "mypy"]
#test = ["pytest", "pytest-cov"]
#docs = ["sphinx"]